# piece

./: .gitignore  Cargo.toml  README.md  build.rs  err.txt
piece-bin/: Cargo.toml  build.rs
piece-bin/src/: editor.rs  export_protos.rs  export_textproto.rs  export_yaml.rs  load.rs  main.rs  process_scryfall.rs  validate.rs
piece-bin/src/ai/: mod.rs
piece-bin/src/ui/: mod.rs
piece-lib/: Cargo.toml  build.rs
piece-lib/cards/a/: abuelos_awakening.yaml  abzan_banner.yaml  abzan_runemark.yaml  acrobatic_leap.yaml  adaptive_gemguard.yaml  akal_pakal_first_among_equals.yaml  allosaurus_shepherd.yaml  ancestral_reminiscence.yaml  annul.yaml  attentive_sunscribe.yaml
piece-lib/cards/b/: basic_island.yaml  basic_plains.yaml  basic_swamp.yaml  bat_colony.yaml  blasting_station.yaml  blood_scrivener.yaml  bog_initiate.yaml  brackish_blunder.yaml  braided_net.yaml
piece-lib/cards/c/: chart_a_course.yaml  clay_fired_bricks.yaml  clone.yaml  cogwork_wrestler.yaml  confounding_riddle.yaml  cosmium_blast.yaml  council_of_echoes.yaml  counterspell.yaml
piece-lib/cards/d/: darigaazs_attendant.yaml  dauntless_dismantler.yaml  deadapult.yaml  deconstruction_hammer.yaml  didact_echo.yaml  dryad_of_the_ilysian_grove.yaml  dusk_rose_reliquary.yaml
piece-lib/cards/e/: eaten_by_piranhas.yaml  elesh_norn_grand_cenobite.yaml  the_enigma_jewel.yaml  the_everflowing_well.yaml
piece-lib/cards/f/: fabrication_foundry.yaml  family_reunion.yaml  forbidden_friendship.yaml  forest.yaml  frilled_cave_wurm.yaml
piece-lib/cards/g/: get_lost.yaml  glorifier_of_suffering.yaml  glowspore_shaman.yaml  guardian_of_the_great_door.yaml
piece-lib/cards/h/: haunting_imitation.yaml  helping_hand.yaml  hermitic_nautilius.yaml  hidden_courtyard.yaml  hoar_shade.yaml  hurl_into_history.yaml
piece-lib/cards/i/: inverted_iceberg.yaml  ironpaw_aspirant.yaml  island.yaml
piece-lib/cards/k/: king_crab.yaml  kinjallis_dawnrunner.yaml  kitesail_larcenist.yaml  krosan_verge.yaml  kutzils_flanker.yaml
piece-lib/cards/l/: lithoform_blight.yaml  lodestone_needle.yaml
piece-lib/cards/m/: mace_of_the_valiant.yaml  majestic_metamorphosis.yaml  malament_war_scribe.yaml  malcom_alluring_scoundrel.yaml  marauding_brinefang.yaml  market_gnome.yaml  merfolk_cave_diver.yaml  might_of_the_ancestors.yaml  miners_guidewing.yaml  mischievous_pup.yaml  mountain.yaml
piece-lib/cards/o/: oaken_siren.yaml  ojer_taq_deepest_foundation.yaml  oltec_archaeologists.yaml  oltec_cloud_guard.yaml  orazca_puzzle_door.yaml  oteclan_landmark.yaml  out_of_air.yaml
piece-lib/cards/p/: paradise_mantle.yaml  petrify.yaml  plains.yaml  plus_2_mace.yaml
piece-lib/cards/q/: queens_commision.yaml  quicksand_whirlpool.yaml
piece-lib/cards/r/: reality_shift.yaml  recruiter_of_the_guard.yaml  relics_roar.yaml  resplendent_angel.yaml  river_herald_scout.yaml  ruin_lurker_bat.yaml
piece-lib/cards/s/: sage_of_days.yaml  sanguine_evangelist.yaml  sinister_strength.yaml  soaring_sandwing.yaml  spring_loaded_sawblades.yaml  swamp.yaml
piece-lib/cards/t/: thermal_blast.yaml  thousand_moons_crackshot.yaml  thousand_moons_smithy.yaml  tinkers_tote.yaml  titania_protector_of_argoth.yaml
piece-lib/cards/u/: unstable_glyphbridge.yaml
piece-lib/cards/v/: vanguard_of_the_rose.yaml
piece-lib/cards/w/: warden_of_the_inner_sky.yaml
piece-lib/src/: abilities.rs  action_result.rs  battlefield.rs  card.rs  cost.rs  exile.rs  graveyard.rs  hand.rs  lib.rs  library.rs  log.rs  stack.rs  targets.rs  triggers.rs  turns.rs  types.rs
piece-lib/src/_tests/: abuelos_awakening.rs  abzan_banner.rs  abzan_runemark.rs  allosuarus_shepherd.rs  basic_lands.rs  bat_colony.rs  blasting_station.rs  blood_scrivener.rs  clone.rs  counterspell.rs  darigaazs_attendant.rs  dauntless_dismantler.rs  deadapult.rs  deconstruction_hammer.rs  dryad_of_the_ilysian_grove.rs  dusk_rose_reliquary.rs  eaten_by_piranhas.rs  elesh_norn_grand_cenobite.rs  fabrication_foundry.rs  family_reunion.rs  forbidden_friendship.rs  glowspore_shaman.rs  haunting_imitation.rs  hoar_shade.rs  king_crab.rs  krosan_verge.rs  lithoform_blight.rs  mace_of_the_valiant.rs  majestic_metamorphosis.rs  mod.rs  paradise_mantle.rs  plus_two_mace.rs  quicksand_whirlpool.rs  reality_shift.rs  recruiter_of_the_guard.rs  sinister_strength.rs  the_everflowing_well.rs  thermal_blast.rs  titania_protector_of_argoth.rs  zhulodok_void_gorger.rs
piece-lib/src/action_result/: add_ability_to_stack.rs  add_counters.rs  add_modifier.rs  add_to_battlefield.rs  add_to_battlefield_from_library.rs  add_to_battlefield_skip_replacement_effects.rs  add_to_battlefield_skip_replacement_effects_from_exile.rs  add_to_battlefield_skip_replacement_effects_from_library.rs  apply_aura_to_target.rs  apply_to_battlefield.rs  ban_attacking.rs  cascade.rs  cascade_exile_to_bottom_of_library.rs  cast_card.rs  clone_card.rs  copy_ability.rs  copy_card_in_stack.rs  create_token.rs  create_token_copy_of.rs  damage_target.rs  declare_attackers.rs  destroy_each.rs  destroy_target.rs  discard.rs  discard_cards.rs  discover.rs  draw_cards.rs  examine_top_cards.rs  exile_graveyard.rs  exile_target.rs  explore.rs  for_each_mana_of_source.rs  gain_life.rs  gain_mana.rs  hand_from_battlefield.rs  if_was_then.rs  lose_life.rs  manifest_top_of_library.rs  mill.rs  mod.rs  (+25 more)
piece-lib/src/ai/: mod.rs
piece-lib/src/effects/: add_counters.rs  apply_modifier.rs  apply_then.rs  apply_then_if_was.rs  apply_to_each_target.rs  attack_selected.rs  ban_attacking_this_turn.rs  battle_cry.rs  battlefield_modifier.rs  cant_attack_this_turn.rs  cascade.rs  cast_selected.rs  choose_attackers.rs  choose_cast.rs  clear_selected.rs  clone_selected.rs  complete_spell_resolution.rs  controller_discards.rs  controller_draws_cards.rs  controller_loses_life.rs  copy_of_any_creature_non_targeting.rs  copy_spell_or_ability.rs  counter_spell.rs  counter_spell_unless_pay.rs  create_token.rs  create_token_clone_of_selected.rs  create_token_copy.rs  cycling.rs  damage_selected.rs  deal_damage.rs  declare_attacking.rs  destroy_each.rs  destroy_selected.rs  destroy_target.rs  (+85 more)
(+500 files in other folders)
