[package]
name        = "piece"
version     = "0.1.0"
edition     = "2021"
default-run = "game"

[[bin]]
name = "game"
path = "src/bin/run_game.rs"

[[bin]]
name = "format"
path = "src/bin/format_textproto.rs"

[[bin]]
name = "export"
path = "src/bin/export_protos.rs"

[dependencies]
anyhow             = "1.0.75"
bevy_ecs           = { version = "0.12.1", default-features = false }
counter            = "0.5.7"
crossterm          = "0.27.0"
derive_more        = "0.99.17"
enum_dispatch      = "0.3.12"
include_dir        = "0.7.3"
indexmap           = { version = "2.1.0", features = [ "serde" ] }
itertools          = "0.12.0"
paste              = "1.0.14"
protobuf           = "3.3.0"
rand               = "0.8.5"
ratatui            = "0.25.0"
scopeguard         = "1.2.0"
strum              = { version = "0.25.0", features = [ "derive" ] }
tracing = { version = "0.1.40", features = ["max_level_debug", "release_max_level_info"] }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
tui-textarea       = "0.4.0"
unicode-width      = "0.1.11"

[build-dependencies]
protobuf-codegen = "3.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
