[package]
name        = "piece"
version     = "0.1.0"
edition     = "2021"
default-run = "game"

[[bin]]
name = "game"
path = "src/bin/run_game.rs"

[[bin]]
name = "textproto"
path = "src/bin/export_textproto.rs"

[[bin]]
name = "yaml"
path = "src/bin/export_yaml.rs"

[[bin]]
name = "json"
path = "src/bin/export_json.rs"

[[bin]]
name = "toml"
path = "src/bin/export_toml.rs"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[dependencies]
anyhow             = "1.0.75"
ariadne            = "0.4.0"
bevy_ecs           = { version = "0.12.1", default-features = false }
counter            = "0.5.7"
derive_more        = "0.99.17"
egui               = "0.21.0"
egui-macroquad     = "0.15.0"
enum_dispatch      = "0.3.12"
include_dir        = "0.7.3"
indexmap           = { version = "2.1.0", features = [ "serde" ] }
itertools          = "0.12.0"
macroquad          = "0.3.25"
paste              = "1.0.14"
protobuf           = "3.3.0"
rand               = "0.8.5"
scopeguard         = "1.2.0"
serde              = { version = "1.0.193", features = [ "derive" ] }
serde_json         = "1.0.108"
serde_yaml         = "0.9.29"
strum              = { version = "0.25.0", features = [ "derive" ] }
taffy              = "0.3.18"
toml               = "0.8.8"
tracing            = { version = "0.1.40", features = [ "max_level_debug", "release_max_level_info" ] }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [ "tracing-log" ] }
unicode-width      = "0.1.11"

[build-dependencies]
protobuf         = "3.3.0"
protobuf-codegen = "3.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
