[package]
name        = "piece"
version     = "0.1.0"
edition     = "2021"
default-run = "game"

[[bin]]
name = "game"
path = "src/bin/run_game.rs"

[[bin]]
name = "textproto"
path = "src/bin/export_textproto.rs"

[[bin]]
name = "yaml"
path = "src/bin/export_yaml.rs"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[dependencies]
aho-corasick       = "1.1.2"
anyhow             = "1.0.75"
approx             = "0.5.1"
ariadne            = "0.4.0"
convert_case       = "0.6.0"
counter            = "0.5.7"
derive_more        = "0.99.17"
eframe             = "0.25.0"
egui               = "0.25.0"
enum_dispatch      = "0.3.12"
include_dir        = "0.7.3"
indexmap           = { version = "2.1.0", features = [ "serde" ] }
itertools          = "0.12.0"
protobuf           = "3.3.0"
rand               = "0.8.5"
scopeguard         = "1.2.0"
serde              = { version = "1.0.193", features = [ "derive" ] }
serde_yaml         = "0.9.29"
strum              = { version = "0.25.0", features = [ "derive" ] }
taffy              = "0.3.18"
tantivy            = { version = "0.21.1", default-features = false }
tracing            = { version = "0.1.40", features = [ "max_level_debug", "release_max_level_info" ] }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [ "tracing-log" ] }
unicode-width      = "0.1.11"

[build-dependencies]
protobuf         = "3.3.0"
protobuf-codegen = "3.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
