[package]
name        = "piece-bin"
version     = "0.1.0"
edition     = "2021"
default-run = "game"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "editor"
path = "src/editor.rs"

[[bin]]
name = "textproto"
path = "src/export_textproto.rs"

[[bin]]
name = "yaml"
path = "src/export_yaml.rs"

[[bin]]
name = "scryfall"
path = "src/process_scryfall.rs"

[dependencies]
anyhow             = "1.0.79"
cfg-if             = "1.0.0"
convert_case       = "0.6.0"
eframe             = "0.25.0"
egui               = "0.25.0"
iftree             = "1.0.4"
indexmap           = "2.1.0"
itertools          = "0.12.0"
native-dialog      = "0.7.0"
nucleo-matcher     = "0.3.0"
piece-lib          = { path = "../piece-lib" }
protobuf           = "3.3.0"
serde              = { version = "1.0.193", features = [ "derive" ] }
serde_json         = "1.0.111"
serde_yaml         = "0.9.29"
taffy              = "0.3.18"
tantivy            = { version = "0.21.1", default-features = false }
tracing            = { version = "0.1.40", features = [ "max_level_debug", "release_max_level_info" ] }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [ "tracing-log" ] }

[build-dependencies]
piece-lib = { path = "../piece-lib" }
protobuf  = "3.3.0"
