[package]
name    = "piece-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick       = "1.1.2"
anyhow             = "1.0.75"
approx             = "0.5.1"
ariadne            = "0.4.0"
cfg-if             = "1.0.0"
convert_case       = "0.6.0"
counter            = "0.5.7"
derivative         = "2.2.0"
derive_more        = "0.99.17"
enum_delegate      = "0.2.0"
iftree             = "1.0.4"
indexmap           = { version = "2.1.0", features = [ "serde" ] }
itertools          = "0.12.0"
protobuf           = "3.3.0"
rand               = "0.8.5"
scopeguard         = "1.2.0"
serde              = { version = "1.0.193", features = [ "derive" ] }
serde_yaml         = "0.9.29"
strum              = { version = "0.25.0", features = [ "derive" ] }
tracing            = { version = "0.1.40", features = [ "max_level_debug", "release_max_level_info" ] }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [ "tracing-log" ] }
unicode-width      = "0.1.11"
uuid               = { version = "1.6.1", features = [ "v4" ] }

[build-dependencies]
protobuf         = "3.3.0"
protobuf-codegen = "3.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
